# rsomics-atac-shift

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: atac_small.bam  atac_small.bam.bai  atac_small.sam  bench_small.bam  bench_small.bam.bai  golden_bench_shifted.bam  golden_shifted.bam
