[package]
name = "rsomics-atac-shift"
version = "0.1.0"
description = "ATAC-seq Tn5 insertion-bias shift: +4/-5 bp coordinate correction and insertion-site BED output"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-atac-shift"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-atac-shift"
path = "src/main.rs"

[lib]
name = "rsomics_atac_shift"
path = "src/lib.rs"

doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-bamio = { version = "0.1.7" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
